# passwords_breaker

./: .gitignore  CMakeLists.txt  README.md
include/: Consumer.h  Producer.h  StringConversion.h  Utilities.h
passwords/: conv_passwords.txt  my_passwords.txt
src/: Consumer.c  Makefile  Producer.c  StringConversion.c  Utilities.c  main.c
